<resources>
    <string name="app_name">Subleased</string>
    <string name="title_activity_maps">Subleased</string>
    <string name="search_button">Search</string>
    <string name="post_ad_title">Title</string>
    <string name="post_ad_address">Street Address</string>
    <string name="post_ad_aptNumber">Apartment Number</string>
    <string name="post_ad_city">City</string>
    <string name="post_ad_state">State</string>
    <string name="post_ad_zip">Zip</string>
    <string name="post_ad_price">Price (per spot)</string>
    <string name="post_ad_spots">Number of Spots</string>
    <string name="post_ad_start_date">Start Date</string>
    <string name="post_ad_end_date">End Date</string>
    <string name="post_ad_desc">Description</string>
    <string name="post_ad_phone">Phone Number</string>
    <string name="post_ad_submit">Submit</string>
    <string name="post_ad_user_email">Email Id</string>
    <string name="gymcheck">Gym</string>
    <string name="hospitalcheck">Hospital</string>
    <string name="schoolcheck">School</string>
    <string name="grocerycheck">Grocery</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_preferences">Set Preferences</string>

    <string name="facebook_app_id">677806702385319</string>
    <string name="cancel_login">this is to cancel the login</string>
    <string name="error_login">this is the error in the login</string>
    <string name="clear_button">Clear</string>
    <string name="public_places">Public Places</string>
</resources>
