<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_my_ad_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appy.locationidentifier.PostMyAdForm">


        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:srcCompat="@android:drawable/ic_menu_camera"-->
            <!--android:id="@+id/camera_button"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true" />-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/post_ad_title"
            android:ems="10"
            android:id="@+id/post_ad_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_ad_city"
            android:ems="10"
            android:id="@+id/post_ad_city"
            android:layout_below="@+id/post_ad_aptNumber"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_ad_zip"
            android:ems="10"
            android:id="@+id/post_ad_zip"
            android:layout_below="@+id/post_ad_state"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/post_ad_price"
            android:ems="10"
            android:id="@+id/post_ad_price"
            android:layout_below="@+id/post_ad_zip"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/post_ad_spots"
            android:ems="10"
            android:id="@+id/post_ad_spots"
            android:layout_below="@+id/post_ad_price"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/post_ad_start_date"
            android:ems="10"
            android:id="@+id/post_ad_start_date"
            android:layout_below="@+id/post_ad_spots"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/post_ad_end_date"
            android:ems="10"
            android:id="@+id/post_ad_end_date"
            android:layout_below="@+id/post_ad_start_date"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/post_ad_desc"
            android:ems="10"
            android:id="@+id/post_ad_desc"
            android:layout_below="@+id/post_ad_end_date"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/post_ad_phone"
            android:ems="10"
            android:id="@+id/post_ad_phone"
            android:layout_below="@+id/post_ad_desc"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_ad_address"
            android:ems="10"
            android:id="@+id/post_ad_address"
            android:layout_below="@+id/post_ad_title"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_ad_aptNumber"
            android:ems="10"
            android:id="@+id/post_ad_aptNumber"
            android:layout_below="@+id/post_ad_address"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_ad_state"
            android:ems="10"
            android:id="@+id/post_ad_state"
            android:layout_below="@+id/post_ad_city"
            android:layout_alignParentStart="true" />

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/post_ad_phone"
            android:layout_centerHorizontal="true"
            android:id="@+id/gridLayout">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV0"
                android:layout_below="@+id/post_ad_phone"
                android:layout_alignStart="@+id/post_ad_phone"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV1"
                android:layout_alignTop="@+id/gV0"
                android:layout_toEndOf="@+id/gV0"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV2"
                android:layout_alignTop="@+id/gV1"
                android:layout_toEndOf="@+id/gV1"
                android:layout_row="0"
                android:layout_column="2"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV3"
                android:layout_below="@+id/post_ad_phone"
                android:layout_alignParentStart="true"
                android:layout_row="1"
                android:layout_column="0"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV4"
                android:layout_below="@+id/gV2"
                android:layout_toEndOf="@+id/gV1"
                android:layout_row="1"
                android:layout_column="1"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/gV5"
                android:layout_below="@+id/gV0"
                android:layout_alignStart="@+id/gV0"
                android:layout_row="1"
                android:layout_column="2"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>


        </GridLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/gallery_button"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/post_ad_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_ad_submit"
            android:onClick="submitAddress"
            android:layout_below="@+id/gallery_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp" />

    </RelativeLayout>
</ScrollView>

