<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="right|top"
        android:layout_weight="0.5">

        <CheckBox android:id="@+id/gymcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gymcheck"
            android:background="@drawable/rounded_edge"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:padding="12dp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/hospitalcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospitalcheck"
            android:background="@drawable/rounded_edge"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:padding="12dp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/schoolcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schoolcheck"
            android:background="@drawable/rounded_edge"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:padding="12dp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/grocerycheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocerycheck"
            android:background="@drawable/rounded_edge"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:padding="12dp"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>

</LinearLayout>